[project]
name = "ledstripdynamics"
version = "0.0.1"
description = "A library for amazing light shows with LED-Strips"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Laurenz Nitsche"}
]
maintainers = [
    {name = "Laurenz Nitsche"}
]
keywords = ["LED", "WS2812b", "Light show", "animation", "library", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)"]
dependencies = [
    "numpy==2.2.5",
    "matplotlib>=3.10.1",
    "PyQt5>=5.15.11",
    "rich",
]

[project.optional-dependencies]
dev = [
    "toml",
    "pillow",
    "sphinx",
    "sphinx_pyreverse",
    "sphinx_mdinclude",
    "sphinx_copybutton",
    "furo"]

[project.scripts]
lsd-docs = "lsd._cli_scripts:docs"

[tool.copyright]
copyright = "2025 OmegaDawn"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
